@@ -3,6 +3,8 @@
 - ASP.NET Core middlware no longer disposes of output stream. #171
 - Fix DotNetStats occasional data tearing under parallel collections. #173
 - Improved wording of some error messages. #169
+- Added Counter.IncTo(), Gauge.IncTo(), Gauge.DecTo(). #181
+- Added Gauge.Set(DateTimeOffset) and Gauge.IncTo(DateTimeOffset). #181
 * 3.3.0
 - Add ability to filter requests by port number when exporting metrics. #160
 * 3.2.1
